# Patchprobe

./: CHANGELOG.md  Implementation_Doc.md  LLM_Assisted_Binary_Patch_Diffing_Design_Doc.md  Makefile  README.md  TASKS.md  audit.jsonl  pyproject.toml
.github/workflows/: ci.yml
job_001/: artifact_index.json  audit.jsonl  job.json  report.json
job_001/artifacts/analysis/: llm.artifact.json  llm.json  (+1 more)
patchprobe/: cli.py  config.py  constants.py  create_test_bins.py  errors.py  logging.py  paths.py
patchprobe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
patchprobe/core/: artifacts.py  audit.py  decompile.py  diff.py  ingest.py  job.py  llm.py  normalize.py  packet.py  pipeline.py  rank.py  report.py  validate.py
patchprobe/models/: db.py  schemas.py
patchprobe/storage/: filesystem_store.py  object_store.py
patchprobe/utils/: buildid.py  filetype.py  jsonschema.py  retry.py  strings.py  subprocess.py
scripts/: ghidra_decompile.py  run_ghidra_headless.sh
specs/schemas/: artifact.schema.json  config.schema.json  decompile_artifact.schema.json  diff_result.schema.json  function_pair.schema.json  job.schema.json  llm_output.schema.json  ranked_candidate.schema.json  report.schema.json  validation_result.schema.json
tests/integration/: test_cli_run.py
tests/unit/: test_artifacts.py  test_buildid.py  test_config.py  test_decompile_backend.py  test_diaphora_backend.py  test_filetype.py  test_hashing.py  test_llm_stage.py  test_object_store.py  test_pipeline.py  test_rank.py  test_report_stage.py  test_validate_stage.py
(+27 files in other folders)
